--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 <body>
     <div class="greetings">
     <!-- kata sesuai kebutuhan<span>text...</span -->
-        <span>H</span>
-        <span>A</span>
-        <span>L</span>
-        <span>L</span>
+        <span>E</span>
+        <span>Y</span>
+        <span>Y</span>
         <span>O</span>
+        <span>W</span>
     </div>
 
     <br>
@@ -32,10 +32,12 @@
     </div>
 
     <div class="description">
-        <span>Karena kamu termasuk orang yang spesial</span>
+        <span>   &copy; 2024 Fidhera</span>
     </div>
+    <hr>
+    <br>
     <div class="description">
-        <span>Aku ada hadiah spesial buat kamu!!</span>
+        <span></span>
     </div>
     <div class="button">
         <button>
