--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </div>
     <div class="button">
         <button>
-            <a href="flower.html">Klik disini</a>
+            <a href="flower.html">Klik</a>
         </button>
         
     </div>
